Db was deployed